--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -49,4 +49,11 @@
             app:layout_constraintTop_toBottomOf="@id/send"
             app:layout_constraintStart_toStartOf="parent"
         />
+    <ProgressBar android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressbar"
+            android:visibility="invisible"
+            app:layout_constraintTop_toBottomOf="@id/resultTextview"
+            app:layout_constraintStart_toStartOf="parent"
+        />
 </android.support.constraint.ConstraintLayout>
